# ELK-flask

./: .dockerignore  .env  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
apm-server/config/: apm-server.yml
app/: apm_middleware.py  app.py  core.py  main.py  models.py
app/templates/: show_all.html
extensions/apm-server/config/: apm-server.yml
extensions/curator/: Dockerfile
extensions/curator/config/: curator.yml
extensions/enterprise-search/: README.md  enterprise-search-compose.yml
extensions/enterprise-search/config/: enterprise-search.yml
extensions/metricbeat/: metricbeat-compose.yml
extensions/metricbeat/config/: metricbeat.yml
filebeat/config/: filebeat.yml
flask/: Dockerfile  app.py
kibana/config/: kibana.yml
logstash/config/: logstash.yml
logstash/pipeline/: logstash.conf  nginx.conf
nginx/: nginx.conf
