[tool.poetry]
name = "elk-stack"
version = "0.1"
description = "Pet project Ylab"
authors = ["s.iodo <s.iodo@ylab.io>"]
readme = "README.md"
packages = [{include = "elk_stack"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
flask-sqlalchemy = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
